--- a/index.html
+++ b/index.html
@@ -35,28 +35,28 @@
                         
     <div class="card employee-card">
     <div class="card-header">
-    <h2 class="card-title">Justin J </h2>
+    <h2 class="card-title">Justin</h2>
     <h3 class="card-title"><i class="fas fa-mug-hot mr-2"></i>Manager</h3>
     </div>
     <div class="card-body">
         <ul class="list-group">
-        <li class="list-group-item">ID: 123</li>
-        <li class="list-group-item">Email: <a href="mailto:justin@justin.com">justin@justin.com</a></li>
-        <li class="list-group-item">Office number: ABC</li>
+        <li class="list-group-item">ID: 1</li>
+        <li class="list-group-item">Email: <a href="mailto:justin@bootcamp.com">justin@bootcamp.com</a></li>
+        <li class="list-group-item">Office number: 123</li>
         </ul>
     </div>
     </div>
         
     <div class="card employee-card">
     <div class="card-header">
-        <h2 class="card-title">Chris</h2>
+        <h2 class="card-title">Edward</h2>
         <h3 class="card-title"><i class="fas fa-glasses mr-2"></i>Engineer</h3>
     </div>
     <div class="card-body">
         <ul class="list-group">
-        <li class="list-group-item">ID: 12345</li>
-        <li class="list-group-item">Email: <a href="mailto:chris@chris.com">chris@chris.com</a></li>
-        <li class="list-group-item">GitHub: <a href="https://github.com/Justin-Morrow" target="_blank" rel="noopener noreferrer">Justin-Morrow</a></li>
+        <li class="list-group-item">ID: 12</li>
+        <li class="list-group-item">Email: <a href="mailto:edward@bootcamp.com">edward@bootcamp.com</a></li>
+        <li class="list-group-item">GitHub: <a href="https://github.com/justin-morrow" target="_blank" rel="noopener noreferrer">justin-morrow</a></li>
         </ul>
     </div>
     </div>
@@ -68,9 +68,9 @@
     </div>
     <div class="card-body">
         <ul class="list-group">
-        <li class="list-group-item">ID: 123456</li>
-        <li class="list-group-item">Email: <a href="mailto:jane@jane.com">jane@jane.com</a></li>
-        <li class="list-group-item">School: Seattle U</li>
+        <li class="list-group-item">ID: 1234</li>
+        <li class="list-group-item">Email: <a href="mailto:jane@bootcamp.com">jane@bootcamp.com</a></li>
+        <li class="list-group-item">School: Harvard</li>
     </ul>
     </div>
     </div>
